# plugin-sdk

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  renovate.json
.github/workflows/: ci.yml
abi/: README.md
cli/: README.md  pubspec.yaml
cli/lib/src/: build.dart  publish.dart  test_cmd.dart
cli/lib/src/wasm/: wasm_runner.dart  wasmtime_bindings.dart  wasmtime_loader.dart
cli/test/: build_test.dart  publish_test.dart  sidecar_test.dart  test_cmd_test.dart
docs/adr/: 0001-streaming-build-toolchain.md  0002-plugin-signing.md
examples/allocation-lens/: .gitignore  Cargo.toml  README.md  build.sh  manifest.json
examples/allocation-lens/src/: lib.rs
examples/allocation-lens/ui/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
examples/allocation-lens/ui/src/: App.svelte  main.ts  styles.css
examples/component-quickstart/: Cargo.toml  INFERENCE.md  README.md  build.sh
examples/component-quickstart-go/: README.md  build.sh  go.mod  main.go
examples/component-quickstart-go/inference/: .gitignore  README.md  build.sh  wit_bindings.go
examples/component-quickstart-go/inference/export_wit_world/: run.go
examples/component-quickstart-go/inference/hellohq_plugin_inference/: wit_bindings.go
examples/component-quickstart-go/inference/hellohq_plugin_log/: wit_bindings.go
examples/component-quickstart-go/inference/hellohq_plugin_types/: wit_bindings.go
examples/component-quickstart-js/: README.md  build.sh  package-lock.json  package.json
examples/component-quickstart-js/src/: plugin.ts
examples/component-quickstart/inference/: Cargo.toml  build.sh
examples/component-quickstart/inference/src/: lib.rs
examples/component-quickstart/src/: lib.rs
examples/fx-advisor/: .gitignore  README.md  build.sh  manifest.json  plugin.py
examples/fx-advisor/ui/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
examples/fx-advisor/ui/src/: App.vue  main.ts  shims-vue.d.ts  styles.css
examples/notes-keeper/: .gitignore  README.md  build.sh  manifest.json  plugin.py
examples/notes-keeper/ui/: index.html  package-lock.json  package.json  styles.css
examples/notes-keeper/ui/src/: main.ts
examples/portfolio-analyst/: .gitignore  README.md  build.sh  manifest.json  plugin.py
examples/portfolio-analyst/ui/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
examples/portfolio-analyst/ui/src/: App.tsx  main.tsx  styles.css
examples/portfolio_overview/: .gitignore  Cargo.toml  README.md  build.sh  manifest.json
examples/portfolio_overview/src/: lib.rs
examples/portfolio_overview/ui/: index.html  package-lock.json  package.json  styles.css  tsconfig.json
examples/portfolio_overview/ui/src/: main.ts
examples/portfolio_summary/: README.md  build.sh  manifest.json  plugin.py
examples/portfolio_summary/ui/: index.html  package-lock.json  package.json  styles.css
examples/portfolio_summary/ui/src/: main.ts
mock-host/: README.md  pubspec.yaml
mock-host/lib/: mock_host.dart
mock-host/test/: mock_host_test.dart
scripts/: fetch-wasmtime-libs.sh
sdks/go/: README.md  go.mod  host_stub.go  host_wasm.go  sdk.go  ui.go
sdks/go/component/: component.go
sdks/go/hq/: hq.go
sdks/go/internal/bindings/hellohq/plugin/events/: abi.go  events.wasm.go  events.wit.go
sdks/go/internal/bindings/hellohq/plugin/guest/: guest.exports.go  guest.wasm.go  guest.wit.go
sdks/go/internal/bindings/hellohq/plugin/hellohq-plugin-component/: hellohq-plugin-component.wit.go
sdks/go/internal/bindings/hellohq/plugin/log/: log.wasm.go  log.wit.go
sdks/go/internal/bindings/hellohq/plugin/storage/: abi.go  storage.wasm.go  storage.wit.go
sdks/go/internal/bindings/hellohq/plugin/types/: types.wit.go
sdks/go/internal/bindings/hellohq/plugin/workspace/: abi.go  workspace.wasm.go  workspace.wit.go
sdks/go/scripts/: gen-bindings.sh  sync-wit.sh
sdks/go/wit/: component.wit
sdks/js/: README.md  package-lock.json  package.json  tsconfig.json
sdks/js/scripts/: sync-wit.sh
sdks/js/src/: component.ts  index.ts
sdks/js/wit/: README.md  component.wit
sdks/python/: README.md  pyproject.toml
sdks/python/examples/: echo_plugin.py
sdks/python/hellohq_plugin_sdk/: __init__.py  host.py  protocol.py  sidecar.py
sdks/python/tests/: test_host.py  test_protocol.py  test_sidecar.py
sdks/rust/: Cargo.toml  README.md
sdks/rust/scripts/: sync-wit.sh
sdks/rust/src/: hq.rs  lib.rs  plugin.rs
sdks/rust/wit/: README.md  hellohq-plugin.wit  quickstart.wit
test/: tier1_integration_test.ts
toolchain/streaming/: Dockerfile  README.md  mirror-upstream.sh  upstream-pr.md
toolchain/streaming/patches/: 0001-pop-record-reverse-field-order.patch
