[package]
name = "allocation_lens"
version = "0.1.0"
edition = "2021"
description = "Finance AI Agent example — Asset Allocation Narrative (Tier 2, Rust)"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
hellohq-plugin-sdk = { path = "../../sdks/rust" }
serde_json = "1"

[profile.release]
opt-level = "z"
lto = true
strip = true
codegen-units = 1
