# Compute half of the Portfolio Overview WebView example. Built for
# wasm32-unknown-unknown, then wrapped into a component with
# `wasm-tools component new` (see build.sh). The empty [workspace] table makes
# this its own workspace root so it never joins a parent crate's build.
[workspace]

[package]
name = "portfolio_overview"
version = "0.1.0"
edition = "2021"
description = "Reference HelloHQ Tier-2 compute component (WebView example), authored with the Rust SDK."
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
hellohq-plugin-sdk = { path = "../../sdks/rust" }

[profile.release]
opt-level = "z"
lto = true
strip = true
codegen-units = 1
